# rustfinity

./: .gitignore  CLAUDE.md  Dockerfile.ralph  PROMPT.md  README.md  ralph.sh  rustfinity
.claude/skills/: create-challenge.md
challenges/: challenges.json  lib.rs
challenges/animal-sanctuary-registry/: description.md
challenges/arc-thread-safety/: Cargo.toml  description.md
challenges/asref-asmut/: Cargo.toml  description.md
challenges/associated-types/: description.md
challenges/binary-heap-priority/: Cargo.toml  description.md
challenges/borrow-toowned/: Cargo.toml  description.md
challenges/box-heap-allocation/: Cargo.toml  description.md
challenges/btreemap-basics/: Cargo.toml  description.md
challenges/btreeset-ranges/: Cargo.toml  description.md
challenges/cell-refcell/: Cargo.toml  description.md
challenges/clone-copy-traits/: Cargo.toml  description.md
challenges/closure-types/: description.md
challenges/collection-conversions/: Cargo.toml  description.md
challenges/cow-copy-on-write/: Cargo.toml  description.md
challenges/custom-iterators/: Cargo.toml  description.md
challenges/debug-display-derive/: Cargo.toml  description.md
challenges/declaring-variables/: description.md
challenges/default-trait-patterns/: Cargo.toml  description.md
challenges/deref-derefmut/: Cargo.toml  (+1 more)
crates/cli/: Cargo.toml
crates/cli/src/: auth.rs  cli.rs  config.rs  confirm.rs  constants.rs  device_flow.rs  download.rs  main.rs
crates/cli/src/commands/: deploy.rs  init.rs  link.rs  mod.rs
scripts/: bump.sh  run-challenge-in-docker.py
(+288 files in other folders)
