[package]
name = "rustfinity"
version = "0.4.1"
edition = "2021"
license = "MIT"
description = "Rustfinity.com CLI"
repository = "https://github.com/dcodesdev/rustfinity.com/tree/main/crates/cli"

[dependencies]
anyhow = "1.0.82"
base64 = "0.22.1"
clap = { version = "4.5.4", features = ["derive"] }
dload = "0.1"
futures = "0.3.30"
reqwest = { version = "0.12.4", features = ["json", "rustls-tls", "multipart"] }
toml = "0.8"
semver = "1.0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
dirs = "5.0"
tokio = { version = "1.37.0", features = ["full"] }
urlencoding = "2.1.3"
libc = "0.2"
webbrowser = "1.0.2"

[dev-dependencies]
tempfile = "3.10.1"
